# persisted-queries-plugin

./: .gitignore
mocked-cdn/: index.js  package.json
mocked-cdn/documents/: get-user-name.graphql
plugin/: Cargo.toml  router.yaml  supergraph-schema.graphql
plugin/src/: main.rs  plugin.rs
subgraphs/accounts/: index.js  package.json
subgraphs/products/: index.js  package.json  pnpm-lock.yaml
