[package]
name = "plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "1.6.0"
futures = "0.3.30"
http = "1.1.0"
hyper = "1.3.1"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
tower = "0.4"

[dependencies.apollo-router]
version = "1.47.0" # Replace with the latest version
